--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.1.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
